--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
+<button id="unit-toggle">Toggle Units</button>
+
 <div>
     <canvas id="myChart"></canvas>
-  </div>
-  
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  
-  <script src = "script.js"></script>
+</div>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script src = "script.js"></script>
  
 
 
